First run after merge