@@ -115,7 +115,7 @@ final class CarrierDriverAgent{
 		} else{
 			Id<Link> startLink;
 			if(!currentRoute.isEmpty()){
-				startLink = currentRoute.getFirst();
+				startLink = currentRoute.get(0);
 			} else{
 				startLink = event.getLinkId();
 			}
